--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-rcssserver3d-0.5.7 README
+rcssserver3d-0.5.8 README
 
-Please see doc/users/user-manual.pdf.
+Please see doc/users/user-manual.pdf and NEWS.
 
 *Note* The README is somewhat outdated and should be fixed after the
  competition in Atlanta. The main difference is that the SimSpark
